--- a/index2.html
+++ b/index2.html
@@ -1,1 +1,22 @@
-boohya hahah
+<!doctype html>
+<head>
+  <title> keep it up</title>
+  <body> <h2> Register please</h2> 
+<form>
+  <input type="text" name="fname" value="First Name" size="30">
+ <input type="text" name="lname" value="Last Name" size="30">
+<br><br>
+E-mail<br><br>
+<input type="email" name="Email ID" value="Email ID" size="80">
+<br><br>
+Password<br><br>
+<input type="password" name="pswd" value="Password" size="30">
+
+
+
+
+
+
+    
+  </body>
+</head>
