--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
         </head>
         <body>
            <h1>document 
-              <h3></h3>
-        
-           </h1>
+              <h3>This website aims to provide students with smart
+                          accessibility tools that provide smart solutions 
+                                     that enhance their educational experience.</h3>
+
         </body>
         </html>
     </body>
