--- a/index2.html
+++ b/index2.html
@@ -9,9 +9,20 @@
 E-mail<br><br>
 <input type="email" name="Email ID" value="Email ID" size="80">
 <br><br>
-Password<br><br>
-<input type="password" name="pswd" value="Password" size="30">
-
+Password: <br><br>
+<input type="password" name="pswd" value="Password" size="30"><br><br
+Class: <br><br>
+<input type="class" name="clas" value="8 or 9 or 10"><br><br>
+  Write 1 for ICSE and 2 for CBSE
+  <input type="board" name="board" value="1-ICSE 2-CBSE"><br><br>
+stream<br><br>
+<select name="stream">
+  
+  <option value="PCM">PCM</option>
+  <option value="PCM">PCM</option>
+  
+    
+  
 
 
 
