--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@ Class: <br><br>
 <input type="class" name="clas" value="8 or 9 or 10"><br><br>
   Write 1 for ICSE and 2 for CBSE
   <input type="board" name="board" value="1-ICSE 2-CBSE><br><br>
-    please choose your stream<br>
+    please choose your stream <br>
     <h4>science</h4><br>
     <input type="radio" name="sub" vaule="PCM">PCM<br>
     <input type="radio" name="sub" vaule="PCB">PCB<br>
@@ -23,6 +23,11 @@ Class: <br><br>
     <input type="radio" name="sub" vaule="Commerce">Commerce<br>
 <h4>Arts</h4>
   <input type="radio" name="sub" vaule="Arts">Arts<br><>br>
+    Optional Subjects<br>
+    <input type="radio" name="styles" value="Computer">Computer<br>
+<input type="radio" name="styles" value="Psychology">Psychology<br>
+<input type="radio" name="styles" value="Fashion designing">Fashion designing<br>
+<input type="radio" name="styles" value="Hindi">Hindi<br><br>
  ICSE<br>   Favourite sub
     <select name="Eng lit">Eng-lit</option>
    <select name="Eng lang">Eng-lang</option>
@@ -92,5 +97,28 @@ Preferred study time<br>
 <input type="radio" name="styles" value="no">no<br><br>
       <button type="button" value="submit">Register</button>
     </form>
+      <br><br><br>
+      <h3>Time table followed by most students</h3>
+      <table bgcolor="black" width="1050"> 
+     <tr bgcolor="grey">
+       <th width="150">Sunday</th>
+     <th width="150">Monday</th>
+<th width="150">Tuesday</th>
+<th width="150">Wednesday</th>
+<th width="150">Thursday</th>
+<th width="150">Friday</th>
+<th width="150">Saturday</th>
+</tr>
+    <tr bgcolor="lightgrey" align="center">
+<td>Phy & His</td>
+<td>Bio & Geo</td>
+<td>Chem & Comp</td>
+<td>Hindi & Elit</td>
+<td>Phy & His</td>
+<td>Bio & Geo</td>
+<td>Chem& Comp</td>
+    </tr>
+        
+      </table>
     </body>
 </head>
